fix: Fix responsiveness issues on smallest devices.

--- a/css/style.css
+++ b/css/style.css
@@ -6,9 +6,9 @@ body {
 }
 
 #list {
-  height: 20%;
+  height: 25%;
 }
 
 #map {
-  height: 80%;
+  height:75%;
 }
